// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms | Legend Default 1`] = `
<legend
  className="NormalizedLegend__Legend-sc-1svgb20-0 Legend__StyledLegendAsCaption-x6z4g1-0 cjPeLN"
>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 cQSKGF"
  >
    Caption text
  </span>
</legend>
`;

exports[`Storyshots Atoms | Legend Docs 1`] = `
<p>
  The Legend component defines a caption for the Fieldset component.
</p>
`;

exports[`Storyshots Atoms | Legend Looking like a label 1`] = `
<legend
  className="NormalizedLegend__Legend-sc-1svgb20-0 Legend__StyledLegendAsLabel-x6z4g1-1 jtzsJR FormLabel__StyledLabel-skax1c-0 VHIlu"
  hidden={false}
>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
  >
    Caption text
  </span>
</legend>
`;
